jenkins jobs另存为实现。只拷贝必要文件